# darshjdb

./: .gitignore  .npmrc  BENCHMARK_SELF.md  CHANGELOG.md  CODE.md  CONTRIBUTING.md  Cargo.toml  DEFERRED.md  Dockerfile  ENDPOINT_AUDIT.md  IMPROVEMENT_LOG.md  LICENSE  NOTICE  README.md  RESEARCH_SOURCES.md  SDK_AUDIT.md  SECURITY.md  SUMMARY.md  SURREAL_FEATURES.md  VERIFICATION.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml  e2e.yml  npm-publish.yml  release.yml
.gstack/: browse.json
.planning/phases/v0.3.2/: SUMMARY-sqlite-store.md
darshan/: _darshan_harness.js  _ddb_harness_deno.ts  djcode_agents.py
deploy/: prometheus.yml
deploy/k8s/: Chart.yaml  values.yaml
deploy/k8s/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/lxc/: config  setup.sh
docs/: DARSHQL.md  HORIZONTAL_SCALING.md  README.md  SECURITY_AUDIT.md  SQL_DIALECTS.md  activity.md  admin-dashboard.md  aggregation.md  api-keys.md  api-reference.md  architecture.md  audit.md  authentication.md  automations.md  caching.md  events.md  fields.md  formulas.md  getting-started.md  history.md  import-export.md  migrating-from-convex.md  migration.md  performance.md  permissions.md  plugins.md  presence.md  query-language.md  relations.md  security.md  self-hosting.md  server-functions.md  sharing.md  storage.md  subscriptions.md  tables.md  triple-store.md  troubleshooting.md  views.md  webhooks.md
docs/benchmarks/: COMPARISON_MATRIX.md  PERFORMANCE_ANALYSIS.md  README.md  vs-appwrite.md  vs-convex.md  vs-firebase.md  vs-instantdb.md  vs-neon.md  vs-pocketbase.md  vs-supabase.md
docs/guide/: index.html
docs/sdks/: angular.md  cli.md  nextjs.md  php.md  python.md  react.md  typescript.md
docs/strategy/: AI_ML_STRATEGY.md  BLOCKCHAIN_LEARNINGS.md  DX_STRATEGY.md  ENTERPRISE_STRATEGY.md  GRAPHDB_LEARNINGS.md  QUANTUM_STRATEGY.md  SCALABILITY_STRATEGY.md  WEB3_STRATEGY.md
examples/chat-app/: README.md
examples/curl-scripts/: README.md  auth.sh  crud.sh  e2e-demo.sh  functions.sh
examples/nextjs-app/: README.md
examples/node-client/: test-connection.js
examples/plain-html/: README.md  index.html
examples/todo-app/: README.md
migrations/sqlite/: 001_initial.sql
scripts/: docker-build.sh  docker-push.sh  e2e-test.sh  publish-npm.sh
sdks/php/: README.md  composer.json  phpunit.xml
sdks/php/config/: darshjdb.php
sdks/php/src/: AuthClient.php  Client.php  Exception.php  QueryBuilder.php  StorageClient.php
sdks/php/src/Laravel/: Facade.php  ServiceProvider.php
sdks/php/tests/: ClientTest.php  ExceptionTest.php  QueryBuilderTest.php
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/darshjdb/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py  test_placeholder.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  live.ts  types.ts
sdks/typescript/tests/: client.test.ts
