[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darshjdb"
version = "0.1.0"
description = "Official Python SDK for DarshJDB — real-time database with auth, storage, and server-side functions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DarshJDB", email = "dev@db.darshj.me" },
]
keywords = ["darshjdb", "database", "realtime", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
sse = ["httpx-sse>=0.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/darshjdb"]
