[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darshjdb"
version = "0.4.0"
description = "Official Python SDK for DarshJDB — real-time database with graph, live queries, auth, and storage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DarshJDB", email = "dev@db.darshj.me" },
]
keywords = ["darshjdb", "database", "realtime", "sdk", "graph", "live-queries"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://db.darshj.me"
Repository = "https://github.com/darshjme/darshjdb"
Documentation = "https://db.darshj.me/docs/python"

[tool.hatch.build.targets.wheel]
packages = ["src/darshjdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
